--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -1,4 +1,4 @@
-extends ../layout
+extends layout
 
 block content
 
@@ -6,7 +6,7 @@ block content
     div(class='container-fluid')
       div(class='row')
         div(class='col-12 text-center')
-          div(class='header') All documents
+          div(class='header') My documents
       if  documents.length === 0
         div(class='row')
           div(class='col-12 text-center')
