--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,30 +15,45 @@ html
       link(rel='stylesheet' href='../../stylesheets/style.css')
       link(rel='stylesheet' href='../../stylesheets/process/backoffice.css')
   body
-    .navbar.navbar-inverse.navbar-fixed-top
-      .navbar-inner
-        .container
+    if current_user
+      div#user_id #{current_user.id}
+      div#user_role #{current_user.role.label}
+    div(id='user-navbar' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
+      div
+        div(id='user')
           if current_user
-            div #{current_user.username} (#{current_user.role.label})
-            div#user_id #{current_user.id}
-            div#user_role #{current_user.role.label}
-          ul.nav
+            label Connected as : #{current_user.username} (#{current_user.role.label})
+          else
+            label Sign up or Sign in to get access to Dataseer Application
+        div(id='navbar')
+          ul
             if current_user
               li
                 a(href='/') Home
               li
-                a(href='/myAccount') My account
+                a(href='/myDocuments') My documents
               li
-                a(href='/backoffice/upload/') Upload document
+                a(href='/backoffice/upload') Upload document
               li
-                a(href='/logout') Log Out 
+                a(href='/settings') Settings
+              li
+                a(href='/signout') Sign out
             else
               li
-                a(href='/register') Register
+                a(href='/') Home
               li
-                a(href='/login') Log In
+                a(href='/signup') Sign up
+              li
+                a(href='/signin') Sign in
+              li
+                a(href='/forgotPassword') Forgot password
 
     block content
+
+    div(style='text-align:center;')  
+      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
+      a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
+        i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
 
   if document
     div(id='document.id' class='data' value=(document._id))
