--- a/views/index.pug
+++ b/views/index.pug
@@ -43,7 +43,7 @@ block content
                 td
                   div Available parameters :
                   ul
-                    li username : Registred email address
+                    li username : Email address
                     li password : Paswword
             thead
               tr
