--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -14,15 +14,25 @@ block content
           div(class='alert alert-warning' role='alert') #{error.filename} : #{error.msg}
     div(class='row')
       div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px;')
-        div(style='margin-top:10px;margin-left:10px;') Upload a new document:
-        div(style='margin-top:10px;margin-left:10px;') supported format are PDF, JATS/NLM, TEI XML, ...
-        
-        if current_user.role.label === 'standard_user'
-          div(class='row' style='margin-top:10px;margin-left:10px;margin-bottom: 10px;')
-            div(style='display: inline-block;') At the moment, it’s pretty foolish. By uploading your article and telling it about the things it gets right and gets wrong about your datasets, you’re helping DataSeer improve. It’s currently happiest with published articles.
-            div(style='display: inline-block;') N.B. We define something as its own ‘data type’ if it needs its own sharing instructions. So, ‘Tabular Data’ is one data type, regardless of whether it’s a table of data from physics or from sociology.
-            div(style='display: inline-block;') You may feel an urge to go to the wiki and add a new data type for your data. It’s vital we keep DataSeer simple and easy to use, so please only add a data type if it’s impossible to fit it under any existing type.
+                
+        div(style='margin-top:10px;margin-left:10px;') Supported formats are PDF, JATS/NLM, TEI XML, publisher XML formats for ScholarOne, BMJ, Elsevier (staging format), NPG (Nature), OUP, PNAS, RSC, Sage, Springer and Wiley.
+
+        //div(style='margin-top:10px;margin-left:10px;') Upload a new document:
 
         include ../forms/documents/upload.pug
-        
+
+    div(class='row')
+      div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-top:10px;')
+
         div(style='margin-top:10px;margin-bottom:10px;margin-left:10px;') DataSeer is powered by AI, which means it’s always learning and improving.
+
+        if current_user.role.label === 'standard_user'
+          div(class='row' style='margin-top:10px;margin-left:10px;margin-bottom: 10px;')
+            div(style='display: inline-block;') By uploading your article and telling it about the things it gets right and gets wrong about your datasets, you’re helping DataSeer improve. Published articles are currently better supported than review-stage/manuscript formats.
+            
+        div(class='row' style='margin-top:10px;margin-left:10px;margin-bottom: 10px;')
+          div(style='display: inline-block;') We define something as its own <i>data type</i> if it needs its own sharing instructions. So, <b>Tabular data</b> is one data type, regardless of whether it’s a table of data from physics or from sociology.
+          div(style='display: inline-block;') You may feel an urge to go to the 
+            a(href="wiki.dataseer.io") wiki 
+            and add a new data type for your data. It’s vital we keep DataSeer simple and easy to use, so please only add a data type if it’s impossible to fit it under any existing type.
+
