--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,9 +20,9 @@ html
       div#user_role #{current_user.role.label}
     div(id='user-navbar' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
       div
-        div(id='user')
+        div(id='user' style='position:absolute; top:0px; right:10px; text-align:right;')
           if current_user
-            label Connected as : #{current_user.username} (#{current_user.role.label})
+            label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label})
           else
             label Sign up or Sign in to get access to Dataseer Application
         div(id='navbar')
