--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -4,26 +4,31 @@ block content
 
   div(class='container-fluid')
     div(class='row')
-      div(class='col-12')
-        h2 Reset password
-    div(class='row')
-      div(class='col-12')
-        form(role='form', action='/resetPassword',method='post', style='max-width: 300px;')
-          if error
-            div(class='alert alert-warning' role='alert') #{error}
-          if success
-            div(class='alert alert-success' role='alert') #{success}
-          .form-group
-            if username
-              input.form-control(type='email', name='username', placeholder='mail address' value=`${username}`)
-            else
-              input.form-control(type='email', name='username', placeholder='mail address' value='')
-          .form-group
-            if token
-              input.form-control(type='text', name='token', placeholder='token' value=`${token}`)
-            else
-              input.form-control(type='text', name='token', placeholder='token' value='')
-          .form-group
-              input.form-control(type='password', name='password', placeholder='New password')
-          .btn-group
-              button.blue.btn.btn-default.waves-effect.waves-light(type='submit') Reset password
+      div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; ')
+        div(class='row')
+          div(class='col-12' style='text-align: center;')
+            h2 Reset password
+        div(class='row')
+          div(class='col-12')
+            form(role='form', action='/resetPassword',method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
+              if error
+                div(class='alert alert-warning' role='alert') #{error}
+              if success
+                div(class='alert alert-success' role='alert') #{success}
+              .form-group
+                if username
+                  input.form-control(type='email', name='username', placeholder='mail address' value=`${username}`)
+                else
+                  input.form-control(type='email', name='username', placeholder='mail address' value='')
+              .form-group
+                if token
+                  input.form-control(type='text', name='token', placeholder='token' value=`${token}`)
+                else
+                  input.form-control(type='text', name='token', placeholder='token' value='')
+              .form-group
+                  input.form-control(type='password', name='password', placeholder='New password')
+              .btn-group
+                  button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Reset password
+
+        div(class='row')
+          div(class='col-12' style='margin-top:20px;')
