--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -4,33 +4,33 @@ block content
 
   div(id='user-navbar-lg' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
     div
-      div(id='user-lg')
+      div(id='user-lg' style='position:absolute; top:0px; right:10px; text-align:right;')
         if current_user
-          label Connected as : #{current_user.username} (#{current_user.role.label})
+          label(style='font-size:small;') Connected as : <b>#{current_user.username}</b> (#{current_user.role.label})
         else
           label Sign up or Sign in to get access to Dataseer Application
       div(id='navbar-lg')
         ul
           if current_user
             li
-              a(href='/') Home
+              a(href='/' style='color:#184D7E;') Home
             li
-              a(href='/myDocuments') My documents
+              a(href='/myDocuments' style='color:#184D7E;') My documents
             li
-              a(href='/backoffice/upload') Upload document
+              a(href='/backoffice/upload' style='color:#184D7E;') Upload document
             li
-              a(href='/settings') Settings
+              a(href='/settings' style='color:#184D7E;') Settings
             li
-              a(href='/signout') Sign out
+              a(href='/signout' style='color:#184D7E;') Sign out
           else
             li
-              a(href='/') Home
+              a(href='/' style='color:#184D7E;') Home
             li
-              a(href='/signup') Sign up
+              a(href='/signup' style='color:#184D7E;') Sign up
             li
-              a(href='/signin') Sign in
+              a(href='/signin' style='color:#184D7E;') Sign in
             li
-              a(href='/forgotPassword') Forgot password
+              a(href='/forgotPassword' style='color:#184D7E;') Forgot password
 
   div(class='bordered' style='border-color:#ffffff;border-width:0px;')
     div(class='container-fluid')
