--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -2,26 +2,28 @@ extends ./layout
 
 block content
 
-  div(class='list')
-    div(class='container-fluid')
-      div(class='row')
-        div(class='col-12 text-center')
-          div(class='header') My documents
-      div(class='row')
-        div(class='col-10 offset-1')
-          input#search(type='text' name='username' placeholder='Search for document (doi, pmid or title)')
-      div(class='row')
-        div(class='col-2 offset-1') Url
-        div(class='col-2') Journal
-        div(class='col-6') Title
-      if  documents.length === 0
-        div(class='row')
-          div(class='col-12 text-center')
-            div(class='header') No data
-      else
-        each document, index in documents
-          div(class='row' data=document.metadata.doi + ';' + document.metadata.pmid + ';' + document.metadata.articleTitle)
-            div(class='col-2 offset-1')
-                a(href='./documents/' + document._id) #{document._id}
-            div(class='col-2') #{document.metadata.journal}
-            div(class='col-6') #{document.metadata.articleTitle}
+  div(class='container-fluid')
+    div(class='row')
+      div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px;')
+        div(class='list')
+          div(class='row')
+            div(class='col-12 text-center' style='margin-top:10px;')
+              div(class='header') My documents
+          div(class='row')
+            div(class='col-10 offset-1')
+              input#search(type='text' name='username' placeholder='Search for document (doi, pmid or title)')
+          div(class='row')
+            div(class='col-2 offset-1') Url
+            div(class='col-2') Journal
+            div(class='col-6') Title
+          if  documents.length === 0
+            div(class='row')
+              div(class='col-12 text-center')
+                div(class='header') No data
+          else
+            each document, index in documents
+              div(class='row' data=document.metadata.doi + ';' + document.metadata.pmid + ';' + document.metadata.articleTitle)
+                div(class='col-2 offset-1')
+                    a(href='./documents/' + document._id) #{document._id}
+                div(class='col-2') #{document.metadata.journal}
+                div(class='col-6') #{document.metadata.articleTitle}
