--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -33,6 +33,6 @@ block content
         div(class='row' style='margin-top:10px;margin-left:10px;margin-bottom: 10px;')
           div(style='display: inline-block;') We define something as its own <i>data type</i> if it needs its own sharing instructions. So, <b>Tabular data</b> is one data type, regardless of whether it’s a table of data from physics or from sociology.
           div(style='display: inline-block;') You may feel an urge to go to the 
-            a(href="wiki.dataseer.io") wiki 
-            and add a new data type for your data. It’s vital we keep DataSeer simple and easy to use, so please only add a data type if it’s impossible to fit it under any existing type.
+            a(href='wiki.dataseer.io' target='_blank') wiki 
+            | and add a new data type for your data. It’s vital we keep DataSeer simple and easy to use, so please only add a data type if it’s impossible to fit it under any existing type.
 
