--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -8,23 +8,23 @@ block content
         if current_user
           label(style='font-size:small;') Connected as : <b>#{current_user.username}</b> (#{current_user.role.label})
         else
-          label Sign up or Sign in to get access to Dataseer Application
+          label(style='font-size:small;') 
+            a(href='/signup') Sign up 
+            | or 
+            a(href='/signin') Sign in 
+            | to access DataSeer
       div(id='navbar-lg')
         ul
           if current_user
             li
-              a(href='/' style='color:#184D7E;') Home
-            li
               a(href='/myDocuments' style='color:#184D7E;') My documents
             li
-              a(href='/backoffice/upload' style='color:#184D7E;') Upload document
+              a(href='/backoffice/upload' style='color:#184D7E;') Upload
             li
               a(href='/settings' style='color:#184D7E;') Settings
             li
               a(href='/signout' style='color:#184D7E;') Sign out
           else
-            li
-              a(href='/' style='color:#184D7E;') Home
             li
               a(href='/signup' style='color:#184D7E;') Sign up
             li
