--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -27,3 +27,6 @@ block content
                     a(href='./documents/' + document._id) #{document._id}
                 div(class='col-2') #{document.metadata.journal}
                 div(class='col-6') #{document.metadata.articleTitle}
+
+          div(class='row')
+            div(class='col-12' style='margin-top:20px;')
