--- a/views/settings.pug
+++ b/views/settings.pug
@@ -10,7 +10,7 @@ block content
             h2 Update password
         div(class='row')
           div(class='col-12')
-            form(role='form', action='/settings',method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
+            form(role='form', action='/settings',method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px; margin-bottom:20px;')
               if error
                 div(class='alert alert-warning' role='alert') #{error}
               if success
@@ -21,6 +21,3 @@ block content
                 input.form-control(type='password', name='new_password', placeholder='new password')
               .btn-group
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') update password
-
-        div(class='row')
-          div(class='col-12' style='margin-top:20px;')
