--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -11,7 +11,10 @@ block content
             div(style='display: inline-block; margin-left: 5px;') successfully uploaded
       if results.errors.length
         each error in results.errors
-          div(class='alert alert-warning' role='alert') #{error.filename} : #{error.msg}
+          if error.filename
+            div(class='alert alert-warning' role='alert') #{error.filename} : #{error.msg}
+          else
+            div(class='alert alert-warning' role='alert') #{error.msg}
     div(class='row')
       div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px;')
                 
