--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,7 @@ html
   body
     if current_user
       div#user_id #{current_user.id}
+      div#user_username #{current_user.username}
       div#user_role #{current_user.role.label}
     div(id='user-navbar' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
       div
@@ -26,34 +27,37 @@ html
         else
           div(id='user' style='position:absolute; top:0px; right:25px; text-align:right;')
             label(style='font-size:small;') 
-              a(href='/signup') Sign up 
+              a(href='/signup' class=(route === '/signup') ? 'active' : '') Sign up 
               | or 
-              a(href='/signin') Sign in 
+              a(href='/signin' class=(route === '/signup') ? 'active' : '') Sign in 
               | to access DataSeer
         div(id='navbar' style='position:absolute; bottom:0px; right:10px; text-align:right;')
           ul
             if current_user
-              li
-                a(href='/myDocuments' class='nav') My documents
-              if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
-                li
-                  a(href='/documents' class='nav') All documents
-              li
-                a(href='/backoffice/upload' class='nav') Upload
               if current_user.role.label === 'curator'
                 li
-                  a(href='/backoffice/accounts' class='nav') Accounts
+                  a(href='/' class=(route === '/') ? 'nav active' : 'nav') Help
               li
-                a(href='/settings' class='nav') Settings
+                a(href='/myDocuments' class=(route === '/myDocuments') ? 'nav active' : 'nav') My documents
+              if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
+                li
+                  a(href='/documents' class=(route === '/documents') ? 'nav active' : 'nav') All documents
               li
-                a(href='/signout' class='nav') Sign out
+                a(href='/backoffice/upload' class=(route === '/backoffice/upload') ? 'nav active' : 'nav') Upload
+              if current_user.role.label === 'curator'
+                li
+                  a(href='/backoffice/accounts' class=(route === '/backoffice/accounts') ? 'nav active' : 'nav') Accounts
+              li
+                a(href='/settings' class=(route === '/settings') ? 'nav active' : 'nav') Settings
+              li
+                a(href='/signout' class=(route === '/signout') ? 'nav active' : 'nav') Sign out
             else
               li
-                a(href='/signup' class='nav') Sign up
+                a(href='/signup' class=(route === '/signup') ? 'nav active' : 'nav') Sign up
               li
-                a(href='/signin' style='color:#184D7E;') Sign in
+                a(href='/signin' class=(route === '/signin') ? 'nav active' : 'nav' style='color:#184D7E;') Sign in
               li
-                a(href='/forgotPassword' style='color:#184D7E;') Forgot password
+                a(href='/forgotPassword' class=(route === '/forgotPassword') ? 'nav active' : 'nav' style='color:#184D7E;') Forgot password
 
     block content
 
