--- a/views/signin.pug
+++ b/views/signin.pug
@@ -23,4 +23,6 @@ block content
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Sign in to Dataseer
 
         div(class='row')
-          div(class='col-12' style='margin-top:20px;')
+          div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') No account yet? 
+            a(href='/signup') Open one here
+
