--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -12,7 +12,7 @@ block content
           div(class='row')
             div(class='col-12')
               input#search(type='text' name='username' placeholder='Search for document (doi, pmid, title, email, etc)')
-          div(class='row head-list')
+          div(class='row head-list' style='margin-right:10px; margin-left:10px;')
             div(class='col-2') Url
             div(class='col-2') Status
             div(class='col-2') Modified by
@@ -24,7 +24,7 @@ block content
                 div(class='header') No data
           else
             each document, index in documents
-              div(class='row' data=true)
+              div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
                 div(class='col-2')
                     a(href='./documents/' + document._id) #{document._id}
                 if document.status === 'metadata'
