--- a/views/signup.pug
+++ b/views/signup.pug
@@ -23,4 +23,5 @@ block content
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Sign up to Dataseer
 
         div(class='row')
-          div(class='col-12' style='margin-top:20px;')
+          div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') Already have an account?  
+            a(href='/signup') Sign in here
