more relative path works

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -88,6 +88,8 @@ html
   else if search
     script(src='../../javascripts/lib/jquery.js')
     script(src='../../javascripts/search.js')
+  else if signin
+    script(src='./javascripts/lib/jquery.js')
   else
     script(src='../javascripts/lib/jquery.js')
 
