--- a/views/signup.pug
+++ b/views/signup.pug
@@ -24,4 +24,4 @@ block content
 
         div(class='row')
           div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') Already have an account?  
-            a(href='/signup') Sign in here
+            a(href='./signup') Sign in here
