--- a/views/layout.pug
+++ b/views/layout.pug
@@ -69,9 +69,7 @@ html
       a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
         i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
 
-  if signin
-    script(src='./javascripts/lib/jquery.js')
-  else if document
+  if document
     div(id='document.id' class='data' value=(document._id))
     script(src='../javascripts/lib/jquery.js')
     script(src='../javascripts/lib/randomColor.min.js')
