resource relative path tries

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 #user-navbar {
-  background-image: url(../../img/DataSeer-logo-75.png);
+  background-image: url(../img/DataSeer-logo-75.png);
   background-repeat: no-repeat;
   min-height: 195px;
   min-width: 485px;
